Server updating and gin added to reload server.

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 # vendor/
 
 ### Go Patch ###
-/vendor/
-/Godeps/
+/src/vendor/
+/src/Godeps/
 
 # End of https://www.toptal.com/developers/gitignore/api/go
